hopefully fixes annoying tap-target box on mobile keys

--- a/src/components/Synth/Synth.css
+++ b/src/components/Synth/Synth.css
@@ -2,6 +2,8 @@
   background-color: #001eff;
   font-family: 'Press Start 2P', cursive;
   color: #d600ff;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -moz-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 .Container {
